--- a/iOS/SignUp/SignUp/Base.lproj/Main.storyboard
+++ b/iOS/SignUp/SignUp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RvM-vB-1JY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Cum-Oh-Wbf">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -16,22 +16,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CnY-Nd-4Vw">
-                                <rect key="frame" x="29" y="79" width="70" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CnY-Nd-4Vw">
+                                <rect key="frame" x="30" y="79" width="62" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="PUSH"/>
                                 <connections>
                                     <segue destination="mDZ-4p-efT" kind="show" id="Ald-PV-wOH"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gpc-Y9-g82">
+                                <rect key="frame" x="64" y="268" width="286" height="78"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이름을 입력해주세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rbg-k5-Okc">
+                                        <rect key="frame" x="0.0" y="0.0" width="286" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="나이를 입력해주세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tyb-ne-XKX">
+                                        <rect key="frame" x="0.0" y="44" width="286" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ae-Yy-LzK">
+                                <rect key="frame" x="88" y="402" width="222" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Set Data To Singleton Instance"/>
+                                <connections>
+                                    <action selector="touchUpSetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eZF-eu-0O3"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="gpc-Y9-g82" firstAttribute="top" secondItem="CnY-Nd-4Vw" secondAttribute="bottom" constant="158" id="MfZ-th-OJL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gpc-Y9-g82" secondAttribute="trailing" constant="64" id="TRN-EU-fgN"/>
+                            <constraint firstItem="8Ae-Yy-LzK" firstAttribute="top" secondItem="gpc-Y9-g82" secondAttribute="bottom" constant="56" id="aju-7v-SR3"/>
+                            <constraint firstItem="CnY-Nd-4Vw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="e11-sp-Zyf"/>
+                            <constraint firstItem="gpc-Y9-g82" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="64" id="lGH-bP-1UW"/>
+                            <constraint firstItem="CnY-Nd-4Vw" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="79" id="pdt-G2-56R"/>
+                        </constraints>
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="aNd-HO-Vzm"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="ageField" destination="Tyb-ne-XKX" id="ojb-Ad-Cto"/>
+                        <outlet property="nameField" destination="Rbg-k5-Okc" id="XaW-DF-M6r"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -45,8 +79,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d34-hI-F04">
+                                <rect key="frame" x="20" y="107" width="177" height="198"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ez9-Ra-Qlj">
+                                <rect key="frame" x="65" y="340" width="132" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="사진 선택하기"/>
+                                <connections>
+                                    <action selector="touchSelectImageButton:" destination="mDZ-4p-efT" eventType="touchUpInside" id="262-hA-gHn"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLa-e4-qN1">
+                                <rect key="frame" x="230" y="229" width="122" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u7x-xL-3N0">
+                                <rect key="frame" x="230" y="196" width="122" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f5Z-r9-zJ2">
+                                <rect key="frame" x="233" y="417" width="62" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="PUSH"/>
+                                <connections>
+                                    <segue destination="pie-uI-FNL" kind="show" id="Esl-LM-CCh"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h0g-T8-ckh">
-                                <rect key="frame" x="26" y="98" width="59" height="31"/>
+                                <rect key="frame" x="79" y="417" width="59" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="POP"/>
@@ -56,13 +126,63 @@
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="FNj-JV-MoV"/>
-                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <navigationItem key="navigationItem" id="HzG-rc-dct"/>
+                    <connections>
+                        <outlet property="ageLabel" destination="jLa-e4-qN1" id="KuG-Sb-9u9"/>
+                        <outlet property="imageView" destination="d34-hI-F04" id="NvN-jj-Fyn"/>
+                        <outlet property="nameLabel" destination="u7x-xL-3N0" id="JOQ-s5-hsM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DvK-15-RPl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1850.7246376811595" y="116.51785714285714"/>
+        </scene>
+        <!--Thrid View Controller-->
+        <scene sceneID="c8k-0X-AEr">
+            <objects>
+                <viewController id="pie-uI-FNL" customClass="ThridViewController" customModule="SignUp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9yN-JM-zfN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="0Jr-e8-l5p">
+                                <rect key="frame" x="0.0" y="348" width="414" height="216"/>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MLA-ZE-AkW">
+                                <rect key="frame" x="111" y="284" width="283" height="37"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="37" id="04U-EC-7nB"/>
+                                    <constraint firstAttribute="width" constant="283" id="9i4-z3-Jgs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7nB-lw-iad"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7nB-lw-iad" firstAttribute="trailing" secondItem="0Jr-e8-l5p" secondAttribute="trailing" id="7o0-09-zU9"/>
+                            <constraint firstItem="MLA-ZE-AkW" firstAttribute="top" secondItem="7nB-lw-iad" secondAttribute="top" constant="196" id="C1c-b0-6Hd"/>
+                            <constraint firstItem="0Jr-e8-l5p" firstAttribute="top" secondItem="MLA-ZE-AkW" secondAttribute="bottom" constant="27" id="Dql-sD-vhL"/>
+                            <constraint firstItem="MLA-ZE-AkW" firstAttribute="leading" secondItem="7nB-lw-iad" secondAttribute="leading" constant="111" id="MlC-JS-a1p"/>
+                            <constraint firstItem="0Jr-e8-l5p" firstAttribute="leading" secondItem="7nB-lw-iad" secondAttribute="leading" id="SV5-Tz-yb2"/>
+                            <constraint firstItem="0Jr-e8-l5p" firstAttribute="top" secondItem="MLA-ZE-AkW" secondAttribute="bottom" constant="27" id="VQS-BP-aIR"/>
+                            <constraint firstItem="7nB-lw-iad" firstAttribute="bottom" secondItem="0Jr-e8-l5p" secondAttribute="bottom" constant="249" id="Y79-pS-nNU"/>
+                            <constraint firstItem="7nB-lw-iad" firstAttribute="trailing" secondItem="MLA-ZE-AkW" secondAttribute="trailing" constant="20" id="bOD-NW-7i8"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="lTd-JI-JJK"/>
+                    <connections>
+                        <outlet property="dateLabel" destination="MLA-ZE-AkW" id="CDH-jk-jjW"/>
+                        <outlet property="datePicker" destination="0Jr-e8-l5p" id="5Hm-q7-wGa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w5Q-EY-U3K" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2671.0144927536235" y="116.51785714285714"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mfw-4T-HFS">
@@ -115,6 +235,17 @@
                     <view key="view" contentMode="scaleToFill" id="sco-Fp-JUc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vWd-bH-kEj">
+                                <rect key="frame" x="11" y="30" width="118" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Dismiss Modal"/>
+                                <connections>
+                                    <action selector="dismissModal" destination="Amr-2a-TOi" eventType="touchUpInside" id="XBF-ed-KUQ"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Qy-eg-hUg"/>
                         <color key="backgroundColor" systemColor="systemOrangeColor"/>
                     </view>
