--- a/iOS/WeatherToday/WeatherToday/Base.lproj/Main.storyboard
+++ b/iOS/WeatherToday/WeatherToday/Base.lproj/Main.storyboard
@@ -105,55 +105,68 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="weatherCell" rowHeight="103" id="v9V-tt-fjh" customClass="WeatherTableViewCell" customModule="WeatherToday" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="103"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="weatherCell" rowHeight="94" id="v9V-tt-fjh" customClass="WeatherTableViewCell" customModule="WeatherToday" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="94"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="v9V-tt-fjh" id="gk0-Ea-pDh">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="103"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="94"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iaK-BR-3qT">
+                                                    <rect key="frame" x="20" y="5" width="84" height="84"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="84" id="Soc-D9-SQj"/>
+                                                        <constraint firstAttribute="width" constant="84" id="rUe-Jg-Kvg"/>
+                                                    </constraints>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPn-u2-qoF">
-                                                    <rect key="frame" x="105" y="9" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="117" y="12" width="80" height="18.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20.5" id="d1d-BU-H3J"/>
+                                                        <constraint firstAttribute="width" constant="80" id="fPv-Qf-mkl"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tsb-hd-Md3">
-                                                    <rect key="frame" x="105" y="39" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="117" y="35" width="200" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="200" id="AXY-vG-87T"/>
+                                                        <constraint firstAttribute="height" constant="17" id="pY9-4h-Mxe"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iaK-BR-3qT">
-                                                    <rect key="frame" x="20" y="18.5" width="68" height="68"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="68" id="hhN-k1-2r3"/>
-                                                        <constraint firstAttribute="height" constant="68" id="pKp-GR-kcd"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CPQ-BJ-xB6">
-                                                    <rect key="frame" x="362" y="36" width="37" height="31"/>
+                                                    <rect key="frame" x="362" y="31.5" width="37" height="31"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" image="chevron.right" catalog="system"/>
                                                 </button>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ZM-4q-Dvc">
-                                                    <rect key="frame" x="105" y="69" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <rect key="frame" x="117" y="56" width="150" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="17" id="kiU-zZ-QyA"/>
+                                                        <constraint firstAttribute="width" constant="150" id="vPL-2g-Y3J"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="fPn-u2-qoF" firstAttribute="leading" secondItem="iaK-BR-3qT" secondAttribute="trailing" constant="17" id="Afy-X5-CgS"/>
-                                                <constraint firstItem="fPn-u2-qoF" firstAttribute="top" secondItem="gk0-Ea-pDh" secondAttribute="top" constant="9" id="D8O-GK-El6"/>
-                                                <constraint firstItem="0ZM-4q-Dvc" firstAttribute="leading" secondItem="iaK-BR-3qT" secondAttribute="trailing" constant="17" id="GYa-hX-XXJ"/>
-                                                <constraint firstItem="0ZM-4q-Dvc" firstAttribute="top" secondItem="Tsb-hd-Md3" secondAttribute="bottom" constant="9" id="Nbr-Vb-NJ8"/>
-                                                <constraint firstItem="iaK-BR-3qT" firstAttribute="top" secondItem="gk0-Ea-pDh" secondAttribute="topMargin" constant="7.5" id="Nmo-ZL-QSC"/>
-                                                <constraint firstItem="Tsb-hd-Md3" firstAttribute="leading" secondItem="iaK-BR-3qT" secondAttribute="trailing" constant="17" id="SEl-Io-pRK"/>
-                                                <constraint firstItem="Tsb-hd-Md3" firstAttribute="top" secondItem="fPn-u2-qoF" secondAttribute="bottom" constant="9" id="U0B-ia-JGP"/>
-                                                <constraint firstItem="CPQ-BJ-xB6" firstAttribute="centerY" secondItem="gk0-Ea-pDh" secondAttribute="centerY" id="WBD-Ip-Jdd"/>
-                                                <constraint firstItem="iaK-BR-3qT" firstAttribute="leading" secondItem="gk0-Ea-pDh" secondAttribute="leadingMargin" id="jqD-Mv-lJh"/>
-                                                <constraint firstAttribute="trailing" secondItem="CPQ-BJ-xB6" secondAttribute="trailing" constant="15" id="slW-gS-MQv"/>
+                                                <constraint firstItem="Tsb-hd-Md3" firstAttribute="top" secondItem="fPn-u2-qoF" secondAttribute="bottom" constant="4.5" id="31a-Yd-HW1"/>
+                                                <constraint firstItem="iaK-BR-3qT" firstAttribute="centerY" secondItem="gk0-Ea-pDh" secondAttribute="centerY" id="Adh-QD-xoO"/>
+                                                <constraint firstItem="fPn-u2-qoF" firstAttribute="top" secondItem="gk0-Ea-pDh" secondAttribute="top" constant="12" id="Ezg-jd-KH7"/>
+                                                <constraint firstItem="Tsb-hd-Md3" firstAttribute="leading" secondItem="iaK-BR-3qT" secondAttribute="trailing" constant="13" id="FC2-2X-cCE"/>
+                                                <constraint firstItem="0ZM-4q-Dvc" firstAttribute="leading" secondItem="iaK-BR-3qT" secondAttribute="trailing" constant="13" id="SYt-vk-QTB"/>
+                                                <constraint firstItem="fPn-u2-qoF" firstAttribute="leading" secondItem="iaK-BR-3qT" secondAttribute="trailing" constant="13" id="gYg-gA-WNI"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="0ZM-4q-Dvc" secondAttribute="bottom" constant="10" id="msv-6W-VfH"/>
+                                                <constraint firstAttribute="trailing" secondItem="CPQ-BJ-xB6" secondAttribute="trailing" constant="15" id="osB-Dj-xdn"/>
+                                                <constraint firstItem="CPQ-BJ-xB6" firstAttribute="centerY" secondItem="gk0-Ea-pDh" secondAttribute="centerY" id="pcZ-63-1d3"/>
+                                                <constraint firstItem="iaK-BR-3qT" firstAttribute="leading" secondItem="gk0-Ea-pDh" secondAttribute="leading" constant="20" symbolic="YES" id="q7M-ck-1Ww"/>
+                                                <constraint firstItem="0ZM-4q-Dvc" firstAttribute="top" secondItem="Tsb-hd-Md3" secondAttribute="bottom" constant="4" id="r2r-a5-c5W"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -167,7 +180,7 @@
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="lMr-mn-7PW" id="PZx-1e-LXn"/>
-                                    <outlet property="delegate" destination="lMr-mn-7PW" id="KEe-Nm-WUH"/>
+                                    <outlet property="delegate" destination="lMr-mn-7PW" id="xdj-AA-ogp"/>
                                 </connections>
                             </tableView>
                         </subviews>
